--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node examples/basic-example.ts",
+    "test-example": "ts-node examples/test-example.js",
     "inspect": "ts-node scripts/inspect-model.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
