--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "avr-vad",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A Node.js library for Voice Activity Detection using Silero VAD",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node examples/basic-example.ts",
-    "test-example": "ts-node examples/test-example.js",
-    "inspect": "ts-node scripts/inspect-model.ts",
-    "test": "jest",
+    "build": "./scripts/build.sh",
     "lint": "eslint src/**/*.ts",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run build && npm run lint"
+    "prepublishOnly": "npm run build && npm run lint",
+    "test": "mocha test/*.spec.js",
+    "clean": "rm -rf dist",
+    "publish": "npm publish"
   },
   "keywords": [
     "vad",
@@ -29,25 +28,19 @@
   },
   "license": "MIT",
   "dependencies": {
-    "node-fetch": "^2.7.0",
-    "onnxruntime-node": "^1.22.0",
-    "wav": "^1.0.2"
+    "onnxruntime-node": "^1.22.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/node-fetch": "^2.6.12",
-    "@types/wav": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.50.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^22.15.30",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "sinon": "^15.0.1",
+    "typescript": "^5.8.3",
+    "wav-decoder": "^1.3.0"
   },
   "files": [
     "lib/**/*",
-    "models/**/*",
     "README.md",
     "LICENSE"
   ],
