--- a/package.json
+++ b/package.json
@@ -31,9 +31,15 @@
     "onnxruntime-node": "^1.22.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.28.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^22.15.30",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "chai": "^4.3.7",
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0",
     "mocha": "^10.2.0",
     "sinon": "^15.0.1",
     "typescript": "^5.8.3",
