--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -13,7 +13,9 @@ jobs:
         with:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
-      - run: npm ci
+      - run: npm run lint
+      - run: npm run clean
+      - run: npm run prepare
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
