--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "./scripts/build.sh",
     "lint": "eslint src/**/*.ts",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run build && npm run lint",
+    "prepublishOnly": "npm run lint && npm run build",
     "test": "mocha test/*.spec.js",
     "clean": "rm -rf dist",
     "publish": "npm publish"
