--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,8 +1,7 @@
 name: Publish Package to npmjs
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,6 +12,7 @@ jobs:
         with:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
+      - run: npm ci
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
