--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,24 @@
 name: Publish to npm
+
 on:
   push:
     branches:
       - main
+
 jobs:
   publish:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
-      
-      - name: Set Working Directory
-        run: |
-          WORKING_DIRECTORY='./'
-          echo "WORKING_DIRECTORY=$WORKING_DIRECTORY" >> $GITHUB_ENV
-          echo "Working Directory: $WORKING_DIRECTORY"
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
@@ -33,4 +30,3 @@ jobs:
         run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: ${{ env.WORKING_DIRECTORY }}
