--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,7 @@
     "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
     "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
     "skipLibCheck": true,
-    "baseUrl": ".",                                   /* Specify the base directory to resolve non-relative module names. */
-    "paths": {                                        /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-      "*": ["src/*", "node_modules/*"]
-    }
+    "typeRoots": ["node_modules/@types"]              /* List of folders to include type definitions from. */
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test"]
