--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,30 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
 
+      - name: Debug - List project structure
+        run: |
+          echo "Project structure:"
+          find src -type f -name "*.ts" | head -20
+          echo "Models directory:"
+          ls -la src/common/models/ || echo "Models directory not found"
+          echo "TypeScript config:"
+          cat tsconfig.json
+
       - name: Install dependencies
         run: npm ci
+
+      - name: Debug - TypeScript version and dry run
+        run: |
+          echo "TypeScript version:"
+          npx tsc --version
+          echo "Node version:"
+          node --version
+          echo "Attempting dry run compilation:"
+          npx tsc --noEmit --listFiles | head -10
 
       - name: Build project
         run: npm run build
