--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es2020",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "allowSyntheticDefaultImports": true,             /* Allow 'import x from y' when a module doesn't have a default export. */
+    "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. */
     "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
     "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
@@ -25,7 +26,11 @@
     "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
     "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
     "skipLibCheck": true,
-    "typeRoots": ["node_modules/@types"]              /* List of folders to include type definitions from. */
+    "typeRoots": ["node_modules/@types"],              /* List of folders to include type definitions from. */
+    "baseUrl": "./src",                               /* Base directory to resolve non-relative module names. */
+    "paths": {                                        /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+      "*": ["*", "../node_modules/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test"]
