--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "avr-vad",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A Node.js library for Voice Activity Detection using Silero VAD",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "./scripts/build.sh",
 		"test": "mocha test/*.spec.js",
-		"clean": "rm -rf dist",
-		"publish": "npm publish --access public"
+		"clean": "rm -rf dist"
   },
   "keywords": [
     "vad",
